compilador.output
Grammar

    0 $accept: S $end

    1 S: sentencia

    2 sentencia: sentencias
    3          | sentencia sentencias

    4 sentencias: expresion
    5           | COMENTARIO
    6           | COMENTARIOL
    7           | VARIABLE '=' expresion

    8 expresion: ENTERO
    9          | DECIMAL
   10          | VARIABLE
   11          | expresion '+' expresion
   12          | expresion '-' expresion
   13          | expresion '*' expresion
   14          | expresion '/' expresion
   15          | expresion '^' expresion
   16          | expr_booleanas
   17          | sentencia_si
   18          | bucle_while

   19 expr_booleanas: expresion MAYOR expresion
   20               | expresion MENOR expresion
   21               | expresion IGUALIGUAL expresion
   22               | expresion DIFERENTE expresion

   23 sentencia_si: SI '(' expr_booleanas ')' sentencia FIN

   24 bucle_while: MIENTRAS '(' expr_booleanas ')' sentencia FIN


Terminals, with rules where they appear

$end (0) 0
'(' (40) 23 24
')' (41) 23 24
'*' (42) 13
'+' (43) 11
'-' (45) 12
'/' (47) 14
'=' (61) 7
'^' (94) 15
error (256)
VARIABLE (258) 7 10
ENTERO (259) 8
DECIMAL (260) 9
COMENTARIO (261) 5
COMENTARIOL (262) 6
SI (263) 23
FIN (264) 23 24
MIENTRAS (265) 24
DIFERENTE (266) 22
MAYOR (267) 19
MENOR (268) 20
IGUALIGUAL (269) 21


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
S (24)
    on left: 1, on right: 0
sentencia (25)
    on left: 2 3, on right: 1 3 23 24
sentencias (26)
    on left: 4 5 6 7, on right: 2 3
expresion (27)
    on left: 8 9 10 11 12 13 14 15 16 17 18, on right: 4 7 11 12 13
    14 15 19 20 21 22
expr_booleanas (28)
    on left: 19 20 21 22, on right: 16 23 24
sentencia_si (29)
    on left: 23, on right: 17
bucle_while (30)
    on left: 24, on right: 18


state 0

    0 $accept: . S $end

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    MIENTRAS     shift, and go to state 7

    S               go to state 8
    sentencia       go to state 9
    sentencias      go to state 10
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 1

    7 sentencias: VARIABLE . '=' expresion
   10 expresion: VARIABLE .

    '='  shift, and go to state 15

    $default  reduce using rule 10 (expresion)


state 2

    8 expresion: ENTERO .

    $default  reduce using rule 8 (expresion)


state 3

    9 expresion: DECIMAL .

    $default  reduce using rule 9 (expresion)


state 4

    5 sentencias: COMENTARIO .

    $default  reduce using rule 5 (sentencias)


state 5

    6 sentencias: COMENTARIOL .

    $default  reduce using rule 6 (sentencias)


state 6

   23 sentencia_si: SI . '(' expr_booleanas ')' sentencia FIN

    '('  shift, and go to state 16


state 7

   24 bucle_while: MIENTRAS . '(' expr_booleanas ')' sentencia FIN

    '('  shift, and go to state 17


state 8

    0 $accept: S . $end

    $end  shift, and go to state 18


state 9

    1 S: sentencia .
    3 sentencia: sentencia . sentencias

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    MIENTRAS     shift, and go to state 7

    $default  reduce using rule 1 (S)

    sentencias      go to state 19
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 10

    2 sentencia: sentencias .

    $default  reduce using rule 2 (sentencia)


state 11

    4 sentencias: expresion .
   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    DIFERENTE   shift, and go to state 20
    MAYOR       shift, and go to state 21
    MENOR       shift, and go to state 22
    IGUALIGUAL  shift, and go to state 23
    '+'         shift, and go to state 24
    '-'         shift, and go to state 25
    '*'         shift, and go to state 26
    '/'         shift, and go to state 27
    '^'         shift, and go to state 28

    $default  reduce using rule 4 (sentencias)


state 12

   16 expresion: expr_booleanas .

    $default  reduce using rule 16 (expresion)


state 13

   17 expresion: sentencia_si .

    $default  reduce using rule 17 (expresion)


state 14

   18 expresion: bucle_while .

    $default  reduce using rule 18 (expresion)


state 15

    7 sentencias: VARIABLE '=' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 30
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 16

   23 sentencia_si: SI '(' . expr_booleanas ')' sentencia FIN

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 31
    expr_booleanas  go to state 32
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 17

   24 bucle_while: MIENTRAS '(' . expr_booleanas ')' sentencia FIN

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 31
    expr_booleanas  go to state 33
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 18

    0 $accept: S $end .

    $default  accept


state 19

    3 sentencia: sentencia sentencias .

    $default  reduce using rule 3 (sentencia)


state 20

   22 expr_booleanas: expresion DIFERENTE . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 34
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 21

   19 expr_booleanas: expresion MAYOR . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 35
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 22

   20 expr_booleanas: expresion MENOR . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 36
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 23

   21 expr_booleanas: expresion IGUALIGUAL . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 37
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 24

   11 expresion: expresion '+' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 38
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 25

   12 expresion: expresion '-' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 39
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 26

   13 expresion: expresion '*' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 40
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 27

   14 expresion: expresion '/' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 41
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 28

   15 expresion: expresion '^' . expresion

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 2
    DECIMAL   shift, and go to state 3
    SI        shift, and go to state 6
    MIENTRAS  shift, and go to state 7

    expresion       go to state 42
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 29

   10 expresion: VARIABLE .

    $default  reduce using rule 10 (expresion)


state 30

    7 sentencias: VARIABLE '=' expresion .
   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    DIFERENTE   shift, and go to state 20
    MAYOR       shift, and go to state 21
    MENOR       shift, and go to state 22
    IGUALIGUAL  shift, and go to state 23
    '+'         shift, and go to state 24
    '-'         shift, and go to state 25
    '*'         shift, and go to state 26
    '/'         shift, and go to state 27
    '^'         shift, and go to state 28

    $default  reduce using rule 7 (sentencias)


state 31

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    DIFERENTE   shift, and go to state 20
    MAYOR       shift, and go to state 21
    MENOR       shift, and go to state 22
    IGUALIGUAL  shift, and go to state 23
    '+'         shift, and go to state 24
    '-'         shift, and go to state 25
    '*'         shift, and go to state 26
    '/'         shift, and go to state 27
    '^'         shift, and go to state 28


state 32

   16 expresion: expr_booleanas .
   23 sentencia_si: SI '(' expr_booleanas . ')' sentencia FIN

    ')'  shift, and go to state 43

    $default  reduce using rule 16 (expresion)


state 33

   16 expresion: expr_booleanas .
   24 bucle_while: MIENTRAS '(' expr_booleanas . ')' sentencia FIN

    ')'  shift, and go to state 44

    $default  reduce using rule 16 (expresion)


state 34

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion
   22               | expresion DIFERENTE expresion .

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 22 (expr_booleanas)


state 35

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   19               | expresion MAYOR expresion .
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 19 (expr_booleanas)


state 36

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   20               | expresion MENOR expresion .
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 20 (expr_booleanas)


state 37

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   21               | expresion IGUALIGUAL expresion .
   22               | expresion . DIFERENTE expresion

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 21 (expr_booleanas)


state 38

   11 expresion: expresion . '+' expresion
   11          | expresion '+' expresion .
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 11 (expresion)


state 39

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   12          | expresion '-' expresion .
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 12 (expresion)


state 40

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   13          | expresion '*' expresion .
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '^'  shift, and go to state 28

    $default  reduce using rule 13 (expresion)


state 41

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   14          | expresion '/' expresion .
   15          | expresion . '^' expresion
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '^'  shift, and go to state 28

    $default  reduce using rule 14 (expresion)


state 42

   11 expresion: expresion . '+' expresion
   12          | expresion . '-' expresion
   13          | expresion . '*' expresion
   14          | expresion . '/' expresion
   15          | expresion . '^' expresion
   15          | expresion '^' expresion .
   19 expr_booleanas: expresion . MAYOR expresion
   20               | expresion . MENOR expresion
   21               | expresion . IGUALIGUAL expresion
   22               | expresion . DIFERENTE expresion

    '^'  shift, and go to state 28

    $default  reduce using rule 15 (expresion)


state 43

   23 sentencia_si: SI '(' expr_booleanas ')' . sentencia FIN

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    MIENTRAS     shift, and go to state 7

    sentencia       go to state 45
    sentencias      go to state 10
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 44

   24 bucle_while: MIENTRAS '(' expr_booleanas ')' . sentencia FIN

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    MIENTRAS     shift, and go to state 7

    sentencia       go to state 46
    sentencias      go to state 10
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 45

    3 sentencia: sentencia . sentencias
   23 sentencia_si: SI '(' expr_booleanas ')' sentencia . FIN

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    FIN          shift, and go to state 47
    MIENTRAS     shift, and go to state 7

    sentencias      go to state 19
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 46

    3 sentencia: sentencia . sentencias
   24 bucle_while: MIENTRAS '(' expr_booleanas ')' sentencia . FIN

    VARIABLE     shift, and go to state 1
    ENTERO       shift, and go to state 2
    DECIMAL      shift, and go to state 3
    COMENTARIO   shift, and go to state 4
    COMENTARIOL  shift, and go to state 5
    SI           shift, and go to state 6
    FIN          shift, and go to state 48
    MIENTRAS     shift, and go to state 7

    sentencias      go to state 19
    expresion       go to state 11
    expr_booleanas  go to state 12
    sentencia_si    go to state 13
    bucle_while     go to state 14


state 47

   23 sentencia_si: SI '(' expr_booleanas ')' sentencia FIN .

    $default  reduce using rule 23 (sentencia_si)


state 48

   24 bucle_while: MIENTRAS '(' expr_booleanas ')' sentencia FIN .

    $default  reduce using rule 24 (bucle_while)
